@@ -1,3 +1,15 @@
+----- cvs ci ------
+So  22 Okt 2000 01:18:55 CEST~
+tobi:
+* Synchronized sqpack with current developmment branch (sqpack.c 1.41). 
+  This yields the following features and bug fixes. If you want to use
+  sqpack with JAM, you should also upgrade smapi to 1.6.4b or newer.
+* jam packing fix (lastreads & replyes)
+* JAM replynext update
+* JAM lastreads update
+* SDM areas support
+
+
 sqpack 1.1.0a-stable
 ====================
 (released on Sun Sep 17 18:58:45 MEST 2000)
